# scanner-rust

./: Cargo.toml  README.md
examples/: add_2.rs  text_spliter.rs
src/: lib.rs  scanner.rs  scanner_ascii.rs  scanner_error.rs  scanner_str.rs  scanner_u8_slice.rs  scanner_u8_slice_ascii.rs  utf8.rs  white_spaces.rs  whitespaces.rs
tests/: counting_sort.rs  scanner.rs  scanner_ascii.rs  scanner_ascii_raw.rs  scanner_raw.rs  scanner_str.rs  scanner_u8_slice.rs  scanner_u8_slice_ascii.rs
tests/data/: input_1.txt
