[package]
name = "scanner-rust"
version = "1.4.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/scanner-rust"
homepage = "https://magiclen.org/scanner-rust"
keywords = ["scanner", "java", "read", "stdin", "stream"]
categories = ["parser-implementations"]
description= "A simple text scanner which can parse primitive types and strings using UTF-8."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/scanner-rust"
branch = "master"

[dependencies]

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false

[features]
nightly = []