[package]
name = "scanner-rust"
version = "2.0.11"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/scanner-rust"
homepage = "https://magiclen.org/scanner-rust"
keywords = ["scanner", "java", "read", "stdin", "stream"]
categories = ["parser-implementations"]
description= "Simple text scanners which can parse primitive types and strings using UTF-8 or ASCII."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/scanner-rust"
branch = "master"

[dependencies]
generic-array = "0.14"
utf8-width = "0.1"

[dependencies.educe]
version = ">=0.4"
features = ["Debug"]
default-features = false