[package]
name = "scanner-rust"
version = "2.0.17"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/magiclen/scanner-rust"
homepage = "https://magiclen.org/scanner-rust"
keywords = ["scanner", "java", "read", "stdin", "stream"]
categories = ["parser-implementations"]
description = "Simple text scanners which can parse primitive types and strings using UTF-8 or ASCII."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
generic-array = "1"
utf8-width = "0.1"

[dependencies.educe]
version = ">=0.4"
features = ["Debug"]
default-features = false
